approval graphs done

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   <main>
     <div class="plotContainer">
       <div id='plotDiv' class="scatPlot"></div>
+      <div id='plotDiv1' class="scatPlot"></div>
     </div>
   </main>
 
