--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
   <!-- Main Content-->
   <main>
     <div class="plotContainer">
+      <div id='plotSentObama' class="scatPlot"></div>
+      <div id='plotSentTrump' class="scatPlot"></div>
+    </div>
+
+    <div class="plotContainer">
       <div id='plotAppObama' class="scatPlot"></div>
       <div id='plotTweetsObama' class="scatPlot"></div>
     </div>
