--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- CSS files -->
-  <link rel="stylesheet" href="styles/styles.css">
+  <!-- Use Bulma CSS Framework -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css">
+  <link rel="stylesheet" href="css/styles.css">
   <title>DECO3100 A3</title>
 </head>
 
@@ -15,38 +17,75 @@
 
   <!-- Main Content-->
   <main>
-    <div class="plotContainer">
-      <div id='plotSentObama' class="scatPlot"></div>
-      <div id='plotSentTrump' class="scatPlot"></div>
-    </div>
+    <article>
 
-    <div class="plotContainer">
-      <div id='plotAppObama' class="scatPlot"></div>
-      <div id='plotTweetsObama' class="scatPlot"></div>
-    </div>
+      <section class="hero bg-img is-large">
+        <div class="hero-body columns is-centered">
+          <div class="container column is-half has-text-centered">
+            <h1 class="title has-text-white is-size-1-desktop pb-3">
+              The Twitter Presidency
+            </h1>
+            <p class="subtitle has-text-white is-size-3-desktop">
+              How Obama and Trump used Twitter during their presidency
+            </p>
+          </div>
+        </div>
+      </section>
 
-    <div class="slidecontainer">
-      <label for="myRange">year:</label>
-      <input type="range" min="2009" max="2015" value="2015" class="slider" id="myRange"
-      onchange="handler(event);">
-    </div>
+      <section class="section columns is-centered">
+        <div class="column is-5">
+          <h1 class="title">In Summary</h1>
+          <p>
+            North Korea and South Korea started out as poor nations after World War II. Today South Korea’s economy and standard of living rank amongst the highest in the world whereas North Korea remains at the bottom of the world’s development ladder (Ellington
+            & Ferrarini, 2017). Due to the secrecy of the North Korean government, its economic data is limited and unreliable (Ellington & Ferrarini, 2017).
+          </p>
+        </div>
+      </section>
 
-    <div class="plotContainer">
-      <div id='plotAppTrump' class="scatPlot"></div>
-      <div id='plotTweetsTrump' class="scatPlot"></div>
-    </div>
+      <section class="section columns is-centered">
+        <div class="column is-5">
+          <h1 class="title">In Summary</h1>
+          <p>
+            North Korea and South Korea started out as poor nations after World War II. Today South Korea’s economy and standard of living rank amongst the highest in the world whereas North Korea remains at the bottom of the world’s development ladder (Ellington
+            & Ferrarini, 2017). Due to the secrecy of the North Korean government, its economic data is limited and unreliable (Ellington & Ferrarini, 2017).
+          </p>
+        </div>
+      </section>
 
-    <!-- <div class="slidecontainer">
+      <div class="plotContainer">
+        <div id='plotSentObama' class="scatPlot"></div>
+        <div id='plotSentTrump' class="scatPlot"></div>
+      </div>
+
+      <div class="plotContainer">
+        <div id='plotAppObama' class="scatPlot"></div>
+        <div id='plotTweetsObama' class="scatPlot"></div>
+      </div>
+
+      <div class="slidecontainer">
+        <label for="myRange">year:</label>
+        <input type="range" min="2009" max="2015" value="2015" class="slider" id="myRange" onchange="handler(event);">
+      </div>
+
+      <div class="plotContainer">
+        <div id='plotAppTrump' class="scatPlot"></div>
+        <div id='plotTweetsTrump' class="scatPlot"></div>
+      </div>
+
+      <!-- <div class="slidecontainer">
       <label for="myRange">year:</label>
       <input type="range" min="2008" max="2021" value="2021" class="slider" id="myRange"
       onchange="handler(event);">
     </div> -->
+
+    </article>
+
   </main>
 
 
   <!-- Required imported script files -->
-  <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-  <script src='charts/charts.js'></script>
+  <!-- <script src="https://cdn.plot.ly/plotly-latest.min.js"></script> -->
+  <!-- <script src='charts/charts.js'></script> -->
 
 </body>
 
