--- a/index.html
+++ b/index.html
@@ -32,13 +32,146 @@
         </div>
       </section>
 
-      <section class="section columns is-centered">
-        <div class="column is-5">
-          <h1 class="title">In Summary</h1>
-          <p>
-            North Korea and South Korea started out as poor nations after World War II. Today South Korea’s economy and standard of living rank amongst the highest in the world whereas North Korea remains at the bottom of the world’s development ladder (Ellington
-            & Ferrarini, 2017). Due to the secrecy of the North Korean government, its economic data is limited and unreliable (Ellington & Ferrarini, 2017).
-          </p>
+      <section class="section">
+        <div class="columns is-centered">
+          <div class="column is-5">
+            <h1 class="title">Obama: An Early Adopter</h1>
+            <p class="mb-4">
+              Twitter, founded in 2006, is an online social networking and microblogging service that allows users to post text-based status updates and messages, known as tweets, of up to 280 characters in length (Tankovska, 2021).
+            </p>
+            <p>
+              During the 2008 United States presidential election, Barack Obama won the presidency in a landslide victory, defeating John McCain by a margin of nearly 200 electoral votes and 8.5 million popular votes (Lutz, 2009).
+            </p>
+          </div>
+        </div>
+        <div class="columns is-centered">
+          <div class="column is-8">
+            <figure>
+              <div id="plotElection2008"></div>
+            </figure>
+          </div>
+        </div>
+        <div class="columns is-centered">
+          <div class="column is-5">
+            <p class="mb-4">
+              A major reason for Obama’s victory was his campaign’s online advocacy, allowing the general public to become engaged and empowered volunteers, donors and advocates through social networks, e-mail advocacy, text messaging and online video (Lutz, 2009).
+            </p>
+            <p>
+              Barack Obama’s usage of social media in his political campaigns including podcasting, Twitter, Myspace, Facebook, and YouTube has drawn comparisons to the adoption of radio, television, MTV, and the Internet in catapulting his presidential campaign to
+              success and has been a topic of scholarly inquiry (Lewin, 2008).
+            </p>
+          </div>
+        </div>
+        <div class="columns is-centered">
+          <div class="column is-8">
+            <figure>
+              <div id="plotElectionNews"></div>
+            </figure>
+          </div>
+        </div>
+        <div class="columns is-centered">
+          <div class="column is-5">
+            <p class="mb-4">
+              In the 2008 presidential campaign, Barack Obama had more supporters on Facebook, more “friends” on Myspace, and more “followers” on Twitter than his opponent John McCain - Obama was the most followed person on Twitter (Brandon, 2008; Shade, 2015). At
+              the time, Twitter seemed like an afterthought even though it created the most personal connection among voters (Brandon, 2008).
+            </p>
+            <p>
+              Obama’s campaign was able to utilise all social media channels more effectively than McCain’s. The campaign also prioritised and tracked prospective voters entirely through to the polls (Krempasky, as cited in Luck, Beaton & Moffatt, 2010). From the table
+              below, it is evident that Obama had a much larger support base than McCain, allowing him to interact with a wider audience, and for voters to advocate the campaign with personal contributions to online networks and communities (Luck, Beaton
+              & Moffatt, 2010).
+            </p>
+          </div>
+        </div>
+        <div class="columns is-centered">
+          <div class="column is-9">
+            <h2 class="title is-4 has-text-centered">Obama Vs. McCain Supporters on Social Media Platforms</h2>
+            <table class="table center">
+              <thead>
+                <tr>
+                  <th>Social Media Platform</th>
+                  <th class="has-text-white has-background-info-dark">Barack Obama</th>
+                  <th class="has-text-white has-background-danger-dark">John McCain</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <th>Facebook</th>
+                  <td>2,379,102 supporters<br><span class="is-size-7">380% more supporters than
+                  McCain</span></td>
+                  <td>620,379 supporters</td>
+                </tr>
+                <tr>
+                  <th>Myspace</th>
+                  <td>833,161 friends<br><span class="is-size-7">380% more friends than
+                  McCain</span></td>
+                  <td>217,811 friends</td>
+                </tr>
+                <tr>
+                  <th>Youtube</th>
+                  <td>
+                    1,792 videos uploaded since Nov 2006
+                    <br>
+                    149,258 subscribers
+                    <br>
+                    4 uploads per day
+                    <br>
+                    120,479,084 Channel Views
+                  </td>
+                  <td>
+                    329 videos uploaded since Feb 2007
+                    <br>
+                    28,343 subscribers
+                    <br>
+                    2 uploads per day
+                    <br>
+                    25,995,773 Channel Views
+                  </td>
+                </tr>
+                <tr>
+                  <th>Twitter</th>
+                  <td>112,474 followers</td>
+                  <td>4,603 followers</td>
+                </tr>
+                <tr>
+                  <th>Text Messages</th>
+                  <td>
+                    1 million subscribers
+                    <br>
+                    20 text messages sent per month on average
+                  </td>
+                  <td>
+                    N/A
+                  </td>
+                </tr>
+                <tr>
+                  <th>MyBO (Barack Obama social networking)</th>
+                  <td>
+                    2 million profiles created
+                    <br>
+                    35,000 volunteer groups
+                    <br>
+                    400,000 blog posts
+                  </td>
+                  <td>
+                    N/A
+                  </td>
+                </tr>
+                <tr>
+                  <th>Emails</th>
+                  <td>13 million email addresses collected</td>
+                  <td>Unreported</td>
+                </tr>
+              </tbody>
+            </table>
+            <figcaption class="is-size-7 has-text-centered">(Poeschl, as cited in Luck, Beaton & Moffatt, 2010)</figcaption>
+          </div>
+        </div>
+        <div class="columns is-centered">
+          <div class="column is-5">
+            <p>
+              In March 2021, Barack Obama was the most followed person on Twitter, with nearly 130 million followers, ahead of second-ranked singer Justin Bieber who had 114 million followers (Tankovska, 2021).
+            </p>
+          </div>
         </div>
       </section>
 
@@ -84,7 +217,8 @@
 
 
   <!-- Required imported script files -->
-  <!-- <script src="https://cdn.plot.ly/plotly-latest.min.js"></script> -->
+  <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+  <script src="charts/charts1.js"></script>
   <!-- <script src='charts/charts.js'></script> -->
 
 </body>
