--- a/index.html
+++ b/index.html
@@ -173,19 +173,90 @@
             </p>
           </div>
         </div>
-      </section>
-
-      <section class="section columns is-centered">
-        <div class="column is-5">
-          <h1 class="title">In Summary</h1>
-          <p>
-            North Korea and South Korea started out as poor nations after World War II. Today South Korea’s economy and standard of living rank amongst the highest in the world whereas North Korea remains at the bottom of the world’s development ladder (Ellington
-            & Ferrarini, 2017). Due to the secrecy of the North Korean government, its economic data is limited and unreliable (Ellington & Ferrarini, 2017).
-          </p>
+        <div class="columns is-centered">
+          <div class="column is-8">
+            <figure>
+              <!-- Twitter Followers 2021 Plot -->
+              <div id=""></div>
+            </figure>
+          </div>
         </div>
       </section>
 
-      <div class="plotContainer">
+      <section class="section">
+        <div class="columns is-centered">
+          <div class="column is-5">
+            <h1 class="title">Enter Trump</h1>
+            <p class="mb-4">
+              Trump announced his presidential campaign in 2015 with 2.98 million Twitter followers; his follower count increased rapidly thereafter (Lerman, 2020). Like Obama, Twitter has been credited as an important tool in the victory of Trump’s 2016 presidential election campaign (Ingram, 2016).
+            </p>
+            <p class="mb-4">
+              While Barack Obama was the first US president to fully harness the power of modern social media platforms, including Facebook and Twitter, no American president has used social media - specifically, Twitter - like Donald Trump (Vazquez, Hickey, Krishnakumar & Boschma, 2020).
+            </p>
+            <p>
+              Trump has tweeted more with each additional year in office (Vazquez et al., 2020). Since taking office in January 2017, he has tweeted more than 25,000 times - an average of 18 times per day, including retweets (Vazquez et al., 2020). His longest break from Twitter in this period was 1.9 days in June 2017, when former FBI Director James Comey was testifying before the Senate Intelligence Committee during the Russia investigation (Vazquez et al., 2020).
+            </p>
+          </div>
+        </div>
+        <div class="columns is-centered">
+          <div class="column is-8">
+            <figure>
+              <!-- Trump Tweet Amount Plot -->
+              <div id=""></div>
+            </figure>
+          </div>
+        </div>
+        <div class="columns is-centered">
+          <div class="column is-5 content">
+            <h1 class="title">Enter Trump</h1>
+            <p class="mb-4">
+              White house press secretary Sean Spicer stated that Trump’s tweets were official statements (Landers, 2017).
+            </p>
+            <p class="mb-4">
+              While Barack Obama was the first US president to fully harness the power of modern social media platforms, including Facebook and Twitter, no American president has used social media - specifically, Twitter - like Donald Trump (Vazquez, Hickey, Krishnakumar & Boschma, 2020).
+            </p>
+            <blockquote>
+              "The President is the President of the United States, so they're considered official statements by the President of the United States" - Sean Spider
+            </blockquote>
+            <p>
+              In accordance with “public interest”, Trumps Twitter account remained unmoderated for most of his presidency ("About public-interest exceptions on Twitter", n.d.; Robertson, 2020).
+            </p>
+          </div>
+        </div>
+      </section>
+
+      <section class="section">
+        <div class="columns is-centered">
+          <div class="column is-5">
+            <h1 class="title">Insults and compliments</h1>
+            <p class="mb-4">
+              From the start of his term until May 2019, Trump had insulted 598 people, places, and things on Twitter; targets of insults included politicians, journalists, news outlets, television hosts and programs, former staffers and associates, government agencies, business leaders, books critical of him, the State of California and State of New York, and entire countries (Lee & Quealy, 2019).
+            </p>
+            <p class="mb-4">
+              Trumps used nicknames to refer to media figures, politicians, and foreign leaders (Bennett, 2018). We can compare this to Obama’s tweets referring to political opposition George Bush and Mitt Romney.
+            </p>
+            <figure class="image">
+              <img src="img/nicknames.png" alt="">
+            </figure>
+          </div>
+        </div>
+        <div class="columns is-centered">
+          <div class="column is-6">
+            <figure>
+              <!-- Trump Tweet Amount Plot -->
+              <div id="plotTweetsObama"></div>
+            </figure>
+          </div>
+          <div class="column is-6">
+            <figure>
+              <!-- Trump Tweet Amount Plot -->
+              <div id="plotTweetsTrump"></div>
+            </figure>
+          </div>
+        </div>
+      </section>
+
+      <!-- <div class="plotContainer">
         <div id='plotSentObama' class="scatPlot"></div>
         <div id='plotSentTrump' class="scatPlot"></div>
       </div>
@@ -203,7 +274,7 @@
       <div class="plotContainer">
         <div id='plotAppTrump' class="scatPlot"></div>
         <div id='plotTweetsTrump' class="scatPlot"></div>
-      </div>
+      </div> -->
 
       <!-- <div class="slidecontainer">
       <label for="myRange">year:</label>
@@ -219,6 +290,7 @@
   <!-- Required imported script files -->
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
   <script src="charts/charts1.js"></script>
+  <script src="charts/charts2.js"></script>
   <!-- <script src='charts/charts.js'></script> -->
 
 </body>
