--- a/index.html
+++ b/index.html
@@ -241,6 +241,13 @@
           </div>
         </div>
         <div class="columns is-centered">
+          <form>
+            <label for="filter">Enter words separated by commas</label><br>
+            <input type="text" id="filter" name="filter" placeholder="E.g. China, Russia"><br>
+            <button class="button" onclick="return getInputValue();">Filter</button>
+          </form>
+        </div>
+        <div class="columns is-centered">
           <div class="column is-6">
             <figure>
               <!-- Trump Tweet Amount Plot -->
