center aligned plots

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <div class="columns is-centered">
           <div class="column is-8">
             <figure>
-              <div id="plotElection2008"></div>
+              <div id="plotElection2008" class="graphs-center"></div>
             </figure>
           </div>
         </div>
@@ -65,7 +65,7 @@
         <div class="columns is-centered">
           <div class="column is-8">
             <figure>
-              <div id="plotElectionNews"></div>
+              <div id="plotElectionNews" class="graphs-center"></div>
             </figure>
           </div>
         </div>
@@ -297,7 +297,7 @@
   <!-- Required imported script files -->
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
   <script src="charts/charts1.js"></script>
-  <script src="charts/charts2.js"></script>
+  <!-- <script src="charts/charts2.js"></script> -->
   <!-- <script src='charts/charts.js'></script> -->
 
 </body>
