number of tweets

--- a/index.html
+++ b/index.html
@@ -194,10 +194,9 @@
           </div>
         </div>
         <div class="columns is-centered">
-          <div class="column is-8">
+          <div class="column is-10">
             <figure>
-              <!-- Trump Tweet Amount Plot -->
-              <div id=""></div>
+              <div id="plotTrumpTweetAmount"></div>
             </figure>
           </div>
         </div>
@@ -730,6 +729,7 @@
   <script src="charts/charts1.js"></script>
   <!-- <script src="charts/charts2.js"></script> -->
   <!-- <script src='charts/charts.js'></script> -->
+  <script src="charts/charts3.js"></script>
 
 </body>
 
