Axes labels and daily tweet amount

--- a/index.html
+++ b/index.html
@@ -201,13 +201,16 @@
           </div>
         </div>
         <div class="columns is-centered">
+          <div class="column is-10">
+            <figure>
+              <div id="plotObamaTweetAmount"></div>
+            </figure>
+          </div>
+        </div>
+        <div class="columns is-centered">
           <div class="column is-5 content">
             <p class="mb-4">
               White house press secretary Sean Spicer stated that Trump’s tweets were official statements (Landers, 2017).
-            </p>
-            <p class="mb-4">
-              While Barack Obama was the first US president to fully harness the power of modern social media platforms, including Facebook and Twitter, no American president has used social media - specifically, Twitter - like Donald Trump (Vazquez, Hickey, Krishnakumar
-              & Boschma, 2020).
             </p>
             <blockquote>
               <i class="is-italic">"The President is the President of the United States, so they're considered official statements by the President of the United States"</i> - Sean Spider
