--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
               While Barack Obama was the first US president to fully harness the power of modern social media platforms, including Facebook and Twitter, no American president has used social media - specifically, Twitter - like Donald Trump (Vazquez, Hickey, Krishnakumar
               & Boschma, 2020).
             </p>
-            <p>
+            <p class="mb-4">
               Trump has tweeted more with each additional year in office (Vazquez et al., 2020). Since taking office in January 2017, he has tweeted more than 25,000 times - an average of 18 times per day, including retweets (Vazquez et al., 2020). His longest break
               from Twitter in this period was 1.9 days in June 2017, when former FBI Director James Comey was testifying before the Senate Intelligence Committee during the Russia investigation (Vazquez et al., 2020).
             </p>
@@ -209,7 +209,7 @@
         </div>
         <div class="columns is-centered">
           <div class="column is-5 content">
-            <p class="mb-4">
+            <p class="mb-4 mt-4">
               White house press secretary Sean Spicer stated that Trump’s tweets were official statements (Landers, 2017).
             </p>
             <blockquote>
@@ -337,7 +337,6 @@
             <div class="columns is-centered">
               <div class="column is-12">
                 <figure>
-                  <!-- Obama Tweet Sentiment Plot -->
                   <div id="plotSentObama" class="graphs-center"></div>
                 </figure>
               </div>
@@ -345,7 +344,6 @@
             <div class="columns is-centered">
               <div class="column is-12">
                 <figure>
-                  <!-- Trump Tweet Sentiment Plot -->
                   <div id="plotSentTrump" class="graphs-center"></div>
                 </figure>
               </div>
@@ -486,7 +484,7 @@
               Trump’s tweets undermined public health messaging, encouraging followers to disregard recommendations to prevent the spread of COVID-19 (Kolata & Rabin, 2020). Scientific, medical, public health, and ethical experts, pandemic survivors, and the families
               of those killed by COVID-19 expressed horror and dismay at Trump's attempt to downplay the COVID-19 pandemic in the United States (Kolata & Rabin, 2020).
             </p>
-            <p>
+            <p class="mb-4">
               At the time of Trump's tweet, COVID-19 had killed at least 210,000 Americans and was estimated to be 10 times more deadly than the seasonal flu which caused an average of 36,000 deaths per year (Greenberg, 2020; Kolata & Rabin, 2020).
             </p>
           </div>
@@ -494,8 +492,7 @@
         <div class="columns is-centered">
           <div class="column is-8">
             <figure>
-              <!-- COVID-19 Plot -->
-              <div id=""></div>
+              <div id="covidPlot"></div>
             </figure>
           </div>
         </div>
@@ -733,6 +730,7 @@
   <!-- <script src="charts/charts2.js"></script> -->
   <!-- <script src='charts/charts.js'></script> -->
   <script src="charts/charts3.js"></script>
+  <script src="charts/charts4.js"></script>
 
 </body>
 
