--- a/index.html
+++ b/index.html
@@ -225,14 +225,16 @@
       <section class="section">
         <div class="columns is-centered">
           <div class="column is-5">
-            <h1 class="title">Insults and compliments</h1>
+            <h1 class="title">Insults and nicknames</h1>
             <p class="mb-4">
               From the start of his term until May 2019, Trump had insulted 598
               people, places, and things on Twitter (Lee & Quealy, 2019). Trump also used nicknames to refer to media figures, politicians, and foreign leaders (Bennett, 2018). 
             </p>
-            <p class="mb-4">
-              We can compare this to Obama’s tweets referring to political opposition George Bush and Mitt Romney.
-            </p>
+            <div class="message">
+              <p class="message-body mb-4">
+                Using the graphs below, see if you can figure out Trump's nicknames
+              </p>
+            </div>
           </div>
         </div>
         <div class="columns is-centered">
@@ -241,44 +243,44 @@
             <table class="table center is-size-7">
               <thead>
                 <tr>
-                  <th>Nickname</th>
                   <th>Personal Name / Official Name</th>
+                  <th>Nickname(s)</th>
                 </tr>
               </thead>
               <tbody>
                 <tr>
-                  <td>Crooked Hillary</td>
                   <td>Hillary Clinton</td>
+                  <td><details><summary>Click to reveal</summary>Crooked Hillary</details></td>
                 </tr>
                 <tr>
-                  <td>Little Rocket Man</td>
                   <td>Kim Jong-un</td>
+                  <td><details><summary>Click to reveal</summary>Little Rocket Man</details></td>
                 </tr>
                 <tr>
-                  <td>Pocahontas</td>
                   <td>Elizabeth Warren</td>
+                  <td><details><summary>Click to reveal</summary>Pocahontas</details></td>
                 </tr>
                 <tr>
-                  <td>Failing New York Times / Failing and Corrupt</td>
                   <td>The New York Times</td>
+                  <td><details><summary>Click to reveal</summary>Failing New York Times / Failing and Corrupt</details></td>
                 </tr>
                 <tr>
-                  <td>17 Angry Democrats</td>
                   <td>Name of attorneys working on Robert Mueller's
                     <br> investigation of potential ties between the
                     <br> Trump campaign and Russia</td>
+                  <td><details><summary>Click to reveal</summary>17 Angry Democrats</details></td>
                 </tr>
                 <tr>
-                  <td>Crazy Maxine Waters</td>
                   <td>Maxine Waters</td>
+                  <td><details><summary>Click to reveal</summary>Crazy Maxine Waters</details></td>
                 </tr>
                 <tr>
-                  <td>Crazy Joe Biden / Corrupt Joe / Sleepy Joe / Joe Hiden</td>
                   <td>Joe Biden</td>
+                  <td><details><summary>Click to reveal</summary>Crazy Joe Biden / Corrupt Joe / Sleepy Joe / Joe Hiden</details></td>
                 </tr>
                 <tr>
-                  <td>China Virus / This Plague / Plague from China</td>
                   <td>COVID-19</td>
+                  <td><details><summary>Click to reveal</summary>China Virus / This Plague / Plague from China</details></td>
                 </tr>
               </tbody>
             </table>
@@ -300,7 +302,7 @@
                       <option value="kim">Kim Jong-un</option>
                       <option value="elizabeth">Elizabeth Warren</option>
                       <option value="nyt">The New York Times</option>
-                      <option value="angry">Angry Democrats</option>
+                      <option value="angry">Attorneys</option>
                       <option value="maxine">Maxine Waters</option>
                       <option value="joe">Joe Biden</option>
                       <option value="covid">COVID-19</option>
@@ -693,32 +695,6 @@
         </div>
       </section>
 
-      <!-- <div class="plotContainer">
-        <div id='plotSentObama' class="scatPlot"></div>
-        <div id='plotSentTrump' class="scatPlot"></div>
-      </div>
-
-      <div class="plotContainer">
-        <div id='plotAppObama' class="scatPlot"></div>
-        <div id='plotTweetsObama' class="scatPlot"></div>
-      </div>
-
-      <div class="slidecontainer">
-        <label for="myRange">year:</label>
-        <input type="range" min="2009" max="2015" value="2015" class="slider" id="myRange" onchange="handler(event);">
-      </div>
-
-      <div class="plotContainer">
-        <div id='plotAppTrump' class="scatPlot"></div>
-        <div id='plotTweetsTrump' class="scatPlot"></div>
-      </div> -->
-
-      <!-- <div class="slidecontainer">
-      <label for="myRange">year:</label>
-      <input type="range" min="2008" max="2021" value="2021" class="slider" id="myRange"
-      onchange="handler(event);">
-    </div> -->
-
     </article>
 
   </main>
@@ -728,7 +704,6 @@
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
   <script src="charts/charts1.js"></script>
   <!-- <script src="charts/charts2.js"></script> -->
-  <!-- <script src='charts/charts.js'></script> -->
   <script src="charts/charts3.js"></script>
   <script src="charts/charts4.js"></script>
 
